# VulkanGameEngine

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
libs/glm-0.9.9.8/glm/detail/: type_half.inl
libs/stb_image/: stb_image.h
libs/tinyobjloader/: tiny_obj_loader.h
libs/tracy/: CMakeLists.txt
libs/tracy/capture/src/: capture.cpp
libs/tracy/csvexport/src/: csvexport.cpp
libs/tracy/examples/OpenCLVectorAdd/: CMakeLists.txt
libs/tracy/examples/ToyPathTracer/Windows/: TestWin.cpp
libs/tracy/import-chrome/src/: import-chrome.cpp
libs/tracy/nfd/: nfd_win.cpp
libs/tracy/profiler/src/: BackendGlfw.cpp  HttpRequest.cpp  IsElevated.cpp  ResolvService.cpp  main.cpp  winmain.cpp
libs/tracy/profiler/src/imgui/: imgui_impl_glfw.cpp  imgui_impl_opengl3_loader.h
libs/tracy/public/client/: TracyCallstack.cpp  TracySysTime.cpp  TracySysTrace.cpp  TracyThread.hpp
libs/tracy/public/common/: TracySocket.cpp  TracySystem.cpp
libs/tracy/server/: TracyMmap.cpp  TracyStorage.cpp  TracyView.cpp  TracyWeb.cpp
libs/tracy/update/src/: update.cpp
res/shaders/: billboard.frag  billboard.vert  standard.frag  standard.vert  texture.frag  texture.vert
res/shaders/compiled/: billboard.frag.spv  billboard.vert.spv  frag.spv  standard.frag.spv  standard.vert.spv  texture.frag.spv  vert.spv
src/: application.cpp  application.hpp  main.cpp
src/rendersystems/: rendersystem.hpp
src/rendersystems/billboard/: billboardrendersystem.cpp  billboardrendersystem.hpp
src/rendersystems/simple/: simplerendersystem.cpp  simplerendersystem.hpp
src/rendersystems/texture/: texturerendersystem.cpp  texturerendersystem.hpp
src/utils/: utils.hpp
src/utils/buffer/: buffer.cpp  buffer.hpp
src/utils/camera/: camera.cpp  camera.hpp
src/utils/descriptors/: descriptors.cpp  descriptors.hpp
src/utils/device/: device.cpp  device.hpp
src/utils/entity/: component.hpp  entity.cpp  entity.hpp
src/utils/entity/components/: model.hpp  point_light.hpp  texture.hpp  transform.hpp
src/utils/frameinfo/: frameinfo.hpp
src/utils/gameobject/: gameobject.cpp  gameobject.hpp
src/utils/image/: image.cpp  image.hpp
src/utils/input/keyboard_movement_controller/: keyboardmovementcontroller.cpp  keyboardmovementcontroller.hpp
src/utils/input/keyboardmovementcontroller/: keyboardmovementcontroller.cpp  keyboardmovementcontroller.hpp
src/utils/input/movementcontroller/: movementcontroller.cpp  movementcontroller.hpp
src/utils/model/: model.cpp  model.hpp
src/utils/pipeline/: pipeline.cpp  pipeline.hpp
src/utils/procedural/: procedural_mesh.hpp
src/utils/procedural/cube/: cube.cpp  cube.hpp
src/utils/procedural/marchingcubes/: marchingcubes.cpp  marchingcubes.hpp  tables.hpp
src/utils/procedural/quad/: quad.cpp  quad.hpp
src/utils/procedural/sphere/: sphere.cpp  sphere.hpp
src/utils/procedural/terrain/: terrain.cpp  terrain.hpp
src/utils/renderer/: renderer.cpp  renderer.hpp
src/utils/swapchain/: swapchain.cpp  swapchain.hpp
src/utils/texture/: texture.cpp  texture.hpp
src/utils/window/: window.cpp  window.hpp
